--- a/app/src/app/home/home.page.scss
+++ b/app/src/app/home/home.page.scss
@@ -1,6 +1,33 @@
 :host zxing-scanner::ng-deep {
-  max-height: 30vh;
+  max-height: 265px;
   max-width: 50vh;
   width: 70vw;
   margin-left: 15vw;
+
+  video {
+    max-height: 265px;
+  }
 }
+
+.center-input {
+  width: 200px;
+  left: calc(50% - 100px);
+  margin: 20px 0 10px 0;
+}
+
+.display-area {
+  max-width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  max-width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
